# autotune

./: .gitignore  LICENSE  README.md  apollonian.py  launch_gpubox.py  requirements.txt  setup.cfg  setup.py
autotune/: README.md  autograd_lib.py  autograd_lib_test.py  autograd_test.py  ciresan_bench.py  conv2d_bench.py  curvature_test.py  curvature_test_disabled.py  eval_conv2d_approx.py  factored_test.py  fisher_test.py  globals.py  goodstuff.py  hessian_test.py  linalg_bench.py  linesearch_test.py  linesearch_test_disabled.py  lyapunov_test.py  lyapunov_test_disabled.py  mnist_end2end_test.py  moments_test.py  plotting_test.py  requirements.txt  test_end2end_mnist.py  train_ciresan.py  train_ciresan_factored.py  train_ciresan_new.py  train_medium.py  train_small.py  train_small_xent.py  train_small_xent_factored.py  train_tiny.py  train_tiny_xent.py  util.py  util_test.py
autotune/gpubox/: gpubox.py  jupyter_notebook_config.json
examples/cifar/: README.md  autoencoder_test.py  autograd_test.py  curvature_test.py  curvature_tests.py  globals.py  hessian_tests.py  linalg_bench.py  linesearch_test.py  lyapunov_test.py  main.py  main_autoencoder.py  main_layerstats.py  plotting_test.py  pytorch_benchmark.py  scipy_benchmark.py  train_medium.py  train_small.py  train_tiny.py  util.py  util_test.py
examples/cifar10/: main.py  train_cifar.py  train_cifar_2.py
examples/dist-cifar/: exe.sh  lenet_distributed_kfac.json  main.py  (+3 more)
models/: alexnet_back.py
old/: README.md  launch_gpubox.py  setup.cfg
optimizers/: lr_scheduler.py
torchcurv/: __init__.py
(+166 files in other folders)
