[metadata]
name = torchcurv
version = 0.1
url = https://github.com/rioyokotalab/pytorch-curv
author = Kazuki Osawa
author_email = osawa1021@gmail.com
license_file = LICENSE
description = A PyTorch extension for second-order optimization & variational inference.
long_description = file: README.md

[options]
zip_safe = False
packages = find:
install_requires =
  torch
  torchvision
